examples/test/testpolicy5454.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5454
  namespace: namespace194
spec:
  podSelector:
    matchLabels:
      key44: value7
      key27: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value48
      podSelector:
        matchLabels:
          key40: value14
          key42: value20
          key35: value35
